<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <item android:title="@string/my_account">
        <menu>
        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/account"
            android:title="@string/sign_up">
        </item>
        </menu>

    </item>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homePage"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/homePage" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/blog"
            android:title= "@string/blog" />
        <item
            android:id="@+id/nav_agent"
            android:icon="@drawable/ic_face"
            android:title="@string/agent" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>



</menu>
